# active_fence_assignment

./: .copilot-instructions.md  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  Test_Execution_Summary.md  assignment.md  docker-compose.yml  export_db.py  issues.txt  pyproject.toml  requirements.txt
data/: hurtlex_processed.json
data/exports/: alerts.csv  alerts.json  monitoring_logs.csv  monitoring_logs.json  posts.csv  posts.json  users.csv  users.json
scripts/: commands.sh  docker-commands.sh  import_data.py  manual_import.py  restart.sh  verify_config.py
services/api/: .env.example  Dockerfile  pyproject.toml
services/api/src/: __init__.py  api.py  config.py
services/api/src/database/: __init__.py  crud.py  database.py  models.py  schemas.py
services/api/tests/: __init__.py  conftest.py  test_api.py  test_crud.py
services/scraper/: .env.example  Dockerfile  pyproject.toml
services/scraper/src/: __init__.py  api_client.py  config.py  main.py  monitoring.py  pipeline.py
services/scraper/src/collectors/: __init__.py  reddit_scraper.py
services/scraper/src/enrichers/: __init__.py  user_enricher.py
services/scraper/src/scorers/: __init__.py  hate_speech_scorer.py
services/scraper/tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_hate_speech_scorer.py  test_main.py  test_monitoring.py  test_pipeline.py  test_reddit_scraper.py  test_user_enricher.py
shared/: __init__.py  models.py  pyproject.toml
src/: __init__.py  api.py  api_client.py  config.py  import_data.py  main.py  models.py  pipeline.py  scheduler.py
src/collectors/: __init__.py  reddit_scraper.py
src/database/: __init__.py  crud.py  database.py  models.py  schemas.py
src/enrichers/: __init__.py  user_enricher.py
src/monitors/: __init__.py
src/scorers/: __init__.py  hate_speech_scorer.py
tests/: test_scraper.py
