[tool.poetry]
name = "reddit-hate-speech-detector"
version = "0.1.0"
description = "Automated Reddit data collection and hate speech detection system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Reddit API
praw = "^7.7.1"
# Data processing
pandas = "^2.1.3"
numpy = "^1.26.2"
# NLP and ML
transformers = "^4.35.2"
torch = "^2.1.1"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
spacy = "^3.7.2"
# HTTP requests
requests = "^2.31.0"
aiohttp = "^3.9.1"
# Configuration
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
# Logging and monitoring
loguru = "^0.7.2"
# Task scheduling
schedule = "^1.2.0"
apscheduler = "^3.10.4"
# Data validation
cerberus = "^1.3.5"
# Rate limiting
ratelimit = "^2.2.1"
# Database (optional)
sqlalchemy = "^2.0.23"
# Testing
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
# Code quality
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
# Utilities
tqdm = "^4.66.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
pytest-mock = "^3.12.0"

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]

[tool.uv.sources]
# Use PyPI by default
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

